--- a/locales/us/home.json
+++ b/locales/us/home.json
@@ -1,27 +1,3 @@
 {
-  "home-page-title": "Introduce your company to Architects | Archsplace Business",
-  "home-meta-desc": "Archsplace is an online service platform for architects, designers and decorators.",
-  "hero-title": "Introduce your company to architects and potential clients",
-  "hero-text1": "Archsplace is an online service platform for architects, designers and decorators.",
-  "hero-text2": "It is the perfect place to introduce new products in the architecture and design industry.",
-  "hero-button": "Get free profile",
-  "home-classify-title": "Which are your industries?",
-  "home-classify-text": "Select your industries to see your potential visibility. If you dont find your industry, you can create new ones.",
-  "home-classify-label": "Monthly user search",
-  "home-classify-button": "Get free profile",
-  "home-classify-how": "How is this calculated?",
-  "home-classify-how-text": "When selecting main categories that represent your industry, the search volume of that category is counted. Furthermore, the system suggest a range of subcategories that you can include in your products and services, their individual search volumes are also included.",
-  "pros-title": "Quality professionals",
-  "sales-metrics-subtitle1": "pageviews since sep 2019",
-  "sales-metrics-title1": "Vision",
-  "sales-metrics-text1": "The vision for Archsplace is to increase accessibility to good design. It therefore strive to offer the best selection of online architectural design professionals.",
-  "sales-metrics-subtitle2": "users since sep 2019",
-  "sales-metrics-title2": "Opportunity",
-  "sales-metrics-text2": "As partner company you give architects, designers and clients, the opportunity to discover your products in the early design phases.",
-  "sales-metrics-subtitle3": "project requests per week",
-  "sales-metrics-title3": "Timing",
-  "sales-metrics-text3": "When project design is online, all project information pass through the platform. Which means your company can be introduced at the right time, at the right place.",
-  "pros-subtitle": "Associate your company with quality professionals",
-  "pros-text1": "Archsplace manually approve all the professionals who register on the platform, with strict criteria for profile activation.",
-  "pros-text2": "This ensures a high standard of architecture quality and user experience. Visit Archsplace to browse the current professionals in United States."
+  "home-page-title": "Introduce your company to Architects | Archsplace Business"
 }
