--- a/locales/us/router.json
+++ b/locales/us/router.json
@@ -1,7 +1,3 @@
 {
-  "sponsor": "sponsor",
-  "invest": "invest",
-  "contact": "contact",
-  "privacy": "privacy",
-  "terms": "terms"
+  "contact": "contact"
 }
