[Project] - fix translations

--- a/locales/us/home.json
+++ b/locales/us/home.json
@@ -1,3 +1,5 @@
 {
-  "home-page-title": "Introduce your company to Architects | Archsplace Business"
+  "home-page-title": "Home | Innoweb",
+  "home-meta-desc": "fuckup",
+  "home-title": "Web Development made for Performance"
 }
