[Project] - implement effect header on transition

--- a/locales/us/home.json
+++ b/locales/us/home.json
@@ -1,5 +1,6 @@
 {
   "home-page-title": "Home | Innoweb",
-  "home-meta-desc": "fuckup",
-  "home-title": "Web Development made for Performance"
+  "home-meta-desc": "Web Development agency specilized in Performance seo and high quality code with the lastest technologies such as react, nextjs and nodejs.",
+  "home-title": "Web Development made for Performance",
+  "home-subtitle": "Websites and progressive web app solutions"
 }
