--- a/locales/us/team.json
+++ b/locales/us/team.json
@@ -1,4 +1,6 @@
 {
+  "team-page-title": "Our team | Innoweb",
+  "team-meta-desc": "Erwan Riou and Kasper Sonne are the team behind InnoWeb Ltd. and all projects.",
   "team-hero-title": "Our team",
   "team-person-1-name": "Erwan A. R. Riou",
   "team-person-1-text": "Born in Paris, France, has a Master in Architecture and Design as well as numerous certificates and diplomas in advanced programming and web development.",
