--- a/locales/us/footer.json
+++ b/locales/us/footer.json
@@ -4,7 +4,7 @@
   "footer-address-1": "Petkov Street 12",
   "footer-address-2": "4000 Plovdiv, Bulgaria",
   "footer-contact-title": "Contact",
-  "footer-contact-email": "info@archsplace.com",
+  "footer-contact-email": "info@innoweb.ltd",
   "footer-contact-phone": "+351 913 343 665",
   "footer-information-title": "Information",
   "footer-information-cookie": "Cookies",
