--- a/locales/us/home.json
+++ b/locales/us/home.json
@@ -4,7 +4,8 @@
   "home-title": "Web Development made for Performance",
   "home-subtitle": "Websites and progressive web app solutions",
   "home-text-1": "Performance is key",
-  "home-text-2": "Numerous studies show that users drop off quickly, from any website or platform, if they encounter a slow experience. Because of this, Google uses a number of speed metrics among their top prioritized ranking factors. Those two facts combined, means your platform will have less users and business activity if your web solution is not build with performance, as one of the primary concerns.",
+  "home-text-2-1": "Numerous studies show that users drop off quickly, from any website or platform, if they encounter a slow experience. Because of this, Google uses a number of speed metrics among their top prioritized ranking factors.",
+  "home-text-2-2": "Those two facts combined, means your platform will have less users and business activity if your web solution is not build with performance, as one of the primary concerns.",
   "home-text-3": "PageSpeed is addictive",
   "home-text-4": "Maybe not for all programmers and web developers, but it is for us. We see it as the ultimate challenge between us and our clients competitors. Those who builds the most advanced and best performing solutions, win.",
   "home-text-5": "Being highly competitive with what we do, gives us joy and work satisfaction. We love to see our clients climb in rankings and grow in conversions. Together we are a team, and we go further than anyone, to win the race. ",
