--- a/locales/us/team.json
+++ b/locales/us/team.json
@@ -2,6 +2,7 @@
   "team-page-title": "Our team | Innoweb",
   "team-meta-desc": "Erwan Riou and Kasper Sonne are the team behind InnoWeb Ltd. and all projects.",
   "team-hero-title": "Our team",
+  "team-hero-subtitle": "Both with backgrounds in architecture and construction, with career paths turning towards web development and online marketing.",
   "team-person-1-name": "Erwan A. R. Riou",
   "team-person-1-text": "Born in Paris, France, has a Master in Architecture and Design as well as numerous certificates and diplomas in advanced programming and web development.",
   "team-person-1-linkedin": "https://www.linkedin.com/in/erwan-riou/",
